fix: add Model mapper